--- a/api/eventus/src/main/resources/application.properties
+++ b/api/eventus/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=eventus
+spring.datasource.url=jdbc:mysql://localhost:3346/?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username = admin
+spring.datasource.password = admin
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
