--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=eventus
-spring.datasource.url=jdbc:mysql://localhost:3346/?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3346/eventus?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = admin
 spring.datasource.password = admin
 
