--- a/eventus/package.json
+++ b/eventus/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
 		"axios": "^1.7.7",
+		"eventus": "file:",
 		"framer-motion": "^11.11.9",
 		"json-server": "^1.0.0-beta.3",
 		"react": "^18.3.1",
