change jpa strategy to use the rights name on db

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3346/eventus?allowPublicKeyRetrieva
 spring.datasource.username = admin
 spring.datasource.password = admin
 
+
+
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
