--- a/eventus/package.json
+++ b/eventus/package.json
@@ -11,6 +11,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.0",
 		"axios": "^1.7.7",
 		"eventus": "file:",
