--- a/eventus/package.json
+++ b/eventus/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@react-oauth/google": "^0.12.1",
 		"axios": "^1.7.7",
 		"eventus": "file:",
 		"framer-motion": "^11.11.9",
