--- a/eventus/package.json
+++ b/eventus/package.json
@@ -11,6 +11,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@react-oauth/google": "^0.12.1",
 		"axios": "^1.7.7",
@@ -20,6 +21,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.1",
+		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.26.2",
 		"yup": "^1.4.0"
 	},
