--- a/eventus/package.json
+++ b/eventus/package.json
@@ -21,6 +21,7 @@
     "eventus": "file:",
     "framer-motion": "^11.11.9",
     "json-server": "^1.0.0-beta.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
